- honor DESTDIR setting while installing rkward R package, and add configure option --with-r-libdir
- only link against -lRlapack, if that is available
- commands producing lots of output would sometimes be impossible to interrupt. Fixed
- show command output immediately in command log
- remember location where R script/workspace files were last opened, and start file-selection dialogs there
- sometimes the last level in the factor levels editor got lost. Fixed

--- Version 0.3.6 - Apr-23-2006
- several fixes to the distributions plugins
- remove debian dir from source distribution again
- remove one level of menu nesting for save/load R Objects plugins
- check for and handle some strange R parse errors that could crash rkward
- make Ctrl+C copy work in the code window of plugins
- use KDE standard icons in object lists (need to be replaced by customized icons in the long run)
- don't try to show higher numeric precision than is actually available
- fix bug in scatterplot plugin
- remove configure options --with-r-share and --with-r-doc (obsoleted by improved wrapper script)
- allow deletion of several rows at once in the data.frame editor and fix some bugs regarding deletion of rows
- prevent R-Object listviews (Varselector, Workspace Browser) from growing excessively wide
- make Ctrl+V work in the console
- middle mouse pastes selection, not global clipboard in the console, as expected
- clean up output of require (quietly=FALSE)
- some fixes for R 2.3.0
- pressing Cancel in readline ("R backend requests information") dialog interrupts the command
- process R X11 events while modal dialogs (such as "R backend requests information") are shown
- allow empty input in readline ("R backend requests information") dialog
- make Ctrl+C/copy work in output and help windows

--- Version 0.3.5 - Apr-16-2006
- give back focus to the script editor after running line/selection/all
- reworded exit dialog box
- show info message, if retrieving context help fails